--- a/index.html
+++ b/index.html
@@ -2,20 +2,98 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>无心十二载（ignore-meaning）</title>
+        <title>自习教室的黑板</title>
         <style>
             body {
+                font-family: cursive;
                 background-color: beige;
+                margin-top: 2%;
                 margin-left: 10%;
                 margin-right: 10%;
                 border: dotted black;
-                padding: 10px 10px 10px 10px;
+                padding: 30px 30px 30px 30px;
+                font-size:x-large;
             }
         </style>
     </head>
     <body>
-        <h1>个人页面</h1>
-        <h2>其他<em>个人页面</em></h2>
-        <a href="https://zh.moegirl.org.cn/User:%E6%97%A0%E5%BF%83%E5%8D%81%E4%BA%8C%E8%BD%BD">萌娘百科</a>
+        <p>欢迎学习Wiki语法，<a href="https://zh.moegirl.org.cn/User:%E6%97%A0%E5%BF%83%E5%8D%81%E4%BA%8C%E8%BD%BD/%E4%B8%AA%E4%BA%BA%E7%AC%94%E8%AE%B0" target="_blank">这里</a>有我的笔记</p>
+        <p>感谢以下同学的帮助（按照编辑次数排序）：杨晨灏、张瑾研、杨浩正、邢创、张致彤</p>
+        <h2>今日作业</h2>
+        <p>作业要好好做哦</p>
+        <p><strong>4.27：</strong></p>
+        <ul>
+            <li><span style="color: #800000;"><b>生物：</b></span>
+                <ul>
+                    <li>R2：生物工程</li>
+                </ul>
+            </li>
+        </ul>
+
+        <h2>事程表</h2>
+        <h3>四月</h3>
+
+        <h2>留言</h2>
+        <p>学有余力的同学可以课后自行学习 <del>Wiki</del> HTML语法</p>
+        <del>关注一朵平凡喵</del>
+
+        <h2>无聊但就是想记录下来的琐事们</h2>
+        <p>韩雪居然提前下课了——3.25</p>
+        <p>韩雪再次白给——3.28</p>
+        <p>浦妈的儿子首次亮相</p>
+        <p>“就像特朗普，靠不住”——任浩——3.31</p>
+        <p>任浩白给——4.1</p>
+        <p>“你不可能一个个列，当然列也是可以的。”——袁液——4.6</p>
+        <p>“那我会骂你的。”——watchbin</p>
+        <p>“王夫逸很可爱的啊”——宋建伯</p>
+        <p>“可以可以，我这边录下来了。”——宋建伯</p>
+        <p>“张致彤你是一个多么伟大的男子汉啊~”——宋建伯</p>
+        <p>“哎呀，他们已经放手啦。”——徐为为</p>
+        <p>“但有时就是防不胜防。”——张琳琳</p>
+        <p>“鸽子一点不怕人（疑惑.jpg）”——watchbin</p>
+        <p>“那么一定是不错的。”——任浩</p>
+        <p>“吸取上节课的教训”——watchbin</p>
+        <p>“这说明你的问题很大”——任浩</p>
+        <p>“上帝把我们扔到世界上肯定不是让我们觉醒觉醒，玩一玩的”——觉醒课代表</p>
+        <p>“你...你不会这样吧...黄天成是一个非常阔达的人。”——宋建伯</p>
+
+        <h2>同学们与老师们的表情包</h2>
+        <h3>老大</h3>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3bOP.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3Lef.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3Hyt.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqUD7q.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqUsA0.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqUyNV.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqdCZR.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqdiIx.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lqd3Jf.gif height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqdQot.jpg height=200 width=200/>
+
+        <h3>Vvv</h3>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3XTS.png height=200 width=200/>
+        <h3>老曹</h3>>
+        <img src=https://s1.ax1x.com/2022/04/27/LqajRU.png height=200 width=200/>
+        <h3>赵前</h3>
+        <img src=https://s1.ax1x.com/2022/04/27/LqdSsJ.png height=200 width=200/>
+        <h3>憨憨同学</h3>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3TSA.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq37QI.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lq3Ow8.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqaJbR.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqatV1.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/LqaGr9.png height=200 width=200/>
+        <img src=https://s1.ax1x.com/2022/04/27/Lqa8KJ.png height=200 width=200/>
+        
+        <h2>当下还用得上的附件</h2>
+
+        <h2>附加信息</h2>
+
+        <h2>历史上的作业们</h2>
+        <p>太多了，懒的补，有空再说</p>
+
+        <h2>历史附件</h2>
+
+        <h2>历史附加信息</h2>
     </body>
 </html>
