--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
                 padding: 30px 30px 30px 30px;
                 font-size:x-large;
             }
+            li {
+                margin-top: 1%;
+                margin-bottom: 1%;
+            }
         </style>
     </head>
     <body>
@@ -23,9 +27,11 @@
         <p>作业要好好做哦</p>
         <p><strong>4.27：</strong></p>
         <ul>
+            <li><span style="color: #800000;"><b>数学：</b></span>蓝皮P70-73</li>
+            <li><span style="color: #800000;"><b>英语：</b></span>GC35 + 订正默写 + 完成普陀ABC</li>
             <li><span style="color: #800000;"><b>生物：</b></span>
                 <ul>
-                    <li>R2：生物工程</li>
+                    <li>R2：问卷星完成生物工程选择题 + 尾号为3的同学上传课堂默写</li>
                 </ul>
             </li>
         </ul>
