--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <body>
         <p>欢迎学习Wiki语法，<a href="https://zh.moegirl.org.cn/User:%E6%97%A0%E5%BF%83%E5%8D%81%E4%BA%8C%E8%BD%BD/%E4%B8%AA%E4%BA%BA%E7%AC%94%E8%AE%B0" target="_blank">这里</a>有我的笔记</p>
         <p>感谢以下同学的帮助（按照编辑次数排序）：杨晨灏、张瑾研、杨浩正、邢创、张致彤</p>
+        <div style="float: right;">
+            <img src="https://img.moegirl.org.cn/common/avatars/698368/original.png?ver=6218f641" width="270px">
+            <center><p>作者.jpg</p></center>
+        </div>
         <h2>今日作业</h2>
         <p>作业要好好做哦</p>
         <p><strong>4.27：</strong></p>
