--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <p>欢迎学习Wiki语法，<a href="https://zh.moegirl.org.cn/User:%E6%97%A0%E5%BF%83%E5%8D%81%E4%BA%8C%E8%BD%BD/%E4%B8%AA%E4%BA%BA%E7%AC%94%E8%AE%B0" target="_blank">这里</a>有我的笔记</p>
-        <p>感谢以下同学的帮助（按照编辑次数排序）：杨晨灏、张瑾研、杨浩正、邢创、张致彤</p>
+        <p>感谢以下同学的帮助（按照编辑次数排序）：张瑾研、杨晨灏、杨浩正、邢创、张致彤</p>
         <div style="float: right;">
             <img src="https://s1.ax1x.com/2022/04/27/LLkKud.jpg" alt="灰色的小恐龙" width="270px">
             <center><p>作者.jpg</p></center>
@@ -31,6 +31,7 @@
         <p>作业要好好做哦</p>
         <p><strong>4.27：</strong></p>
         <ul>
+            <li><span style="color: #800000;"><b>语文：</b></span>古诗鉴赏重做 + 古文字词解释</li>
             <li><span style="color: #800000;"><b>数学：</b></span>蓝皮P70-73</li>
             <li><span style="color: #800000;"><b>英语：</b></span>GC35 + 订正默写 + 完成普陀ABC</li>
             <li><span style="color: #800000;"><b>生物：</b></span>
