--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
         <p>欢迎学习Wiki语法，<a href="https://zh.moegirl.org.cn/User:%E6%97%A0%E5%BF%83%E5%8D%81%E4%BA%8C%E8%BD%BD/%E4%B8%AA%E4%BA%BA%E7%AC%94%E8%AE%B0" target="_blank">这里</a>有我的笔记</p>
         <p>感谢以下同学的帮助（按照编辑次数排序）：张瑾研、杨晨灏、杨浩正、邢创、张致彤</p>
         <div style="float: right;">
-            <img src="https://s1.ax1x.com/2022/04/27/LLkKud.jpg" alt="灰色的小恐龙" width="270px">
+            <img src="https://s1.ax1x.com/2022/04/27/LLkKud.jpg" alt="灰色的小恐龙" width="200px">
             <center><p>作者.jpg</p></center>
         </div>
         <h2>今日作业</h2>
         <p>作业要好好做哦</p>
-        <p><strong>4.27：</strong></p>
+        <p><strong>4.28：</strong></p>
         <ul>
-            <li><span style="color: #800000;"><b>语文：</b></span>古诗鉴赏重做 + 古文字词解释</li>
-            <li><span style="color: #800000;"><b>数学：</b></span>蓝皮P70-73</li>
-            <li><span style="color: #800000;"><b>英语：</b></span>GC35 + 订正默写 + 完成普陀ABC</li>
+            <li><span style="color: #800000;"><b>英语：</b></span>GC36 + 普陀六选四和概要 + 订正阶段练习翻译，明天默写</li>
             <li><span style="color: #800000;"><b>生物：</b></span>
                 <ul>
-                    <li>R2：问卷星完成生物工程选择题 + 尾号为3的同学上传课堂默写<ref></li>
+                    <li>R2：生物工程剩下的题目 + 订正周练 + 尾数为2的同学提交默写</li>
                 </ul>
             </li>
         </ul>
+        
 
         <h2>事程表</h2>
         <h3>四月</h3>
 
         <h2>留言</h2>
         <p>学有余力的同学可以课后自行学习 <del>Wiki</del> HTML语法</p>
-        <del>关注一朵平凡喵</del>
+        <p><del>关注一朵平凡喵</del></p>
+        <p style="color: #800000;"><strong>5月1日（周一）白天不上课，晚上物理辅导照常</strong></p>
         
         <h2>当下还用得上的附件</h2>
         <a href="https://ks.wjx.top/vj/QREGSfX.aspx" target="_blank">4.27生物答题链接</a>
@@ -103,6 +103,17 @@
 
         <h2>历史上的作业们</h2>
         <p>太多了，懒的补，有空再说</p>
+        <p><strong>4.27：</strong></p>
+        <ul>
+            <li><span style="color: #800000;"><b>语文：</b></span>古诗鉴赏重做 + 古文字词解释</li>
+            <li><span style="color: #800000;"><b>数学：</b></span>蓝皮P70-73</li>
+            <li><span style="color: #800000;"><b>英语：</b></span>GC35 + 订正默写 + 完成普陀ABC</li>
+            <li><span style="color: #800000;"><b>生物：</b></span>
+                <ul>
+                    <li>R2：问卷星完成生物工程选择题 + 尾号为3的同学上传课堂默写<ref></li>
+                </ul>
+            </li>
+        </ul>
 
         <h2>历史附件</h2>
 
