--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <p>作业要好好做哦</p>
         <p><strong>4.28：</strong></p>
         <ul>
+            <li><span style="color: #800000;"><b>语文：</b></span>试卷二篇古文实词整理</li>
+            <li><span style="color: #800000;"><b>数学：</b></span>选必二往后4页</li>
             <li><span style="color: #800000;"><b>英语：</b></span>GC36 + 普陀六选四和概要 + 订正阶段练习翻译，明天默写</li>
             <li><span style="color: #800000;"><b>生物：</b></span>
                 <ul>
@@ -72,6 +74,7 @@
         <p>“这说明你的问题很大”——任浩</p>
         <p>“上帝把我们扔到世界上肯定不是让我们觉醒觉醒，玩一玩的”——觉醒课代表</p>
         <p>“你...你不会这样吧...黄天成是一个非常阔达的人。”——宋建伯</p>
+        <p>“不会这样想吧，除非脑子坏了。”——watchbin</p>
 
         <h2>同学们与老师们的表情包</h2>
         <h3>老大</h3>
