--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
         </div>
         <h2>今日作业</h2>
         <p>作业要好好做哦</p>
-        <p><strong>4.28：</strong></p>
+        <p><strong>周末4.29：</strong></p>
         <ul>
-            <li><span style="color: #800000;"><b>语文：</b></span>试卷二篇古文实词整理</li>
-            <li><span style="color: #800000;"><b>数学：</b></span>选必二往后4页</li>
-            <li><span style="color: #800000;"><b>英语：</b></span>GC36 + 普陀六选四和概要 + 订正阶段练习翻译，明天默写</li>
-            <li><span style="color: #800000;"><b>生物：</b></span>
+            <li><span style="color: #800000;"><b>英语：</b></span>
                 <ul>
-                    <li>R2：生物工程剩下的题目 + 订正周练 + 尾数为2的同学提交默写</li>
+                    <li>高词37、38，周三默写</li>
+                    <li>金山一模（作文不写）</li>
+                    <li>普陀一模词汇积累，抄写并翻译</li>
+                    <li>订正本周所有的默写</li>
+                    <li>订正阶段练习及普陀一模的翻译，下周二默写</li>
+                </ul>
+            </li>
+            <li>
+                <span style="color: #800000;"><b>生物：</b></span>
+                <ul>
+                    <li>R2：看周练讲解视频并订正（大群，29日，13时50分）（4.30上传） + 周末卷（5.1上传）</li>
                 </ul>
             </li>
         </ul>
@@ -51,7 +58,6 @@
         <p style="color: #800000;"><strong>5月1日（周一）白天不上课，晚上物理辅导照常</strong></p>
         
         <h2>当下还用得上的附件</h2>
-        <a href="https://ks.wjx.top/vj/QREGSfX.aspx" target="_blank">4.27生物答题链接</a>
 
         <h2>附加信息</h2>
 
@@ -75,6 +81,7 @@
         <p>“上帝把我们扔到世界上肯定不是让我们觉醒觉醒，玩一玩的”——觉醒课代表</p>
         <p>“你...你不会这样吧...黄天成是一个非常阔达的人。”——宋建伯</p>
         <p>“不会这样想吧，除非脑子坏了。”——watchbin</p>
+        <p>“孩子们，节日快乐！”——watchbin</p>
 
         <h2>同学们与老师们的表情包</h2>
         <h3>老大</h3>
@@ -118,7 +125,20 @@
             </li>
         </ul>
 
+        <p><strong>4.28：</strong></p>
+        <ul>
+            <li><span style="color: #800000;"><b>语文：</b></span>试卷二篇古文实词整理</li>
+            <li><span style="color: #800000;"><b>数学：</b></span>选必二往后4页</li>
+            <li><span style="color: #800000;"><b>英语：</b></span>GC36 + 普陀六选四和概要 + 订正阶段练习翻译，明天默写</li>
+            <li><span style="color: #800000;"><b>生物：</b></span>
+                <ul>
+                    <li>R2：生物工程剩下的题目 + 订正周练 + 尾数为2的同学提交默写</li>
+                </ul>
+            </li>
+        </ul>
+
         <h2>历史附件</h2>
+        <a href="https://ks.wjx.top/vj/QREGSfX.aspx" target="_blank">4.27生物答题链接</a>
 
         <h2>历史附加信息</h2>
     </body>
