--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
         <p>作业要好好做哦</p>
         <p><strong>周末4.29：</strong></p>
         <ul>
+            <li><span style="color: #800000;"><b>语文：</b></span>
+                <ul>
+                    <li>
+                        预习包身工》三选二书面提交
+                        <ol>
+                            <li>说说文中你最厌恶谁？为什么？</li>
+                            <li>最同情谁？为什么？</li>
+                            <li>这种制度恶在那里？</li>
+                        </ol>
+                    </li>
+                    <li>深度《宋朝的雨》+《干干净净的傅雷》</li>
+                    <li>实词复习60-80（下周四默写）</li>
+                    <li>阅读《谈美》眉批 点评（进度自行安排）</li>
+                </ul>
+            </li>
+            <li><span style="color:#800000;"><b>数学：</b></span>
+                <ul>
+                    <li>选必二往后4页</li>
+                    <li>周练卷</li>
+                </ul>
+            </li>
             <li><span style="color: #800000;"><b>英语：</b></span>
                 <ul>
                     <li>高词37、38，周三默写</li>
